# ai-agent-team-spec

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/agents/: AGENTS.md  release-policy.json
docs/agents/examples/: 01_feature_happy_path.md  02_critic_reject_and_rework.md
docs/agents/prompts/: builder_backend.md  builder_frontend.md  critic.md  orchestrator.md  planner.md  platform.md
docs/agents/schemas/: agent_error_v1.json  deploy_artifact_v1.json  implementation_artifact_backend_v1.json  implementation_artifact_frontend_v1.json  micro_spec_v1.json  orchestrator_step_v1.json  review_artifact_v1.json  run_summary_v1.json
sdk/: openhands_runner.py
